2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor\SourceEditorView.cs: Fix nullref.

2009-06-18  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	  Worked on on the fly formatting. DO NOT USE THIS OPTION (it
	  may break code. But for testing it may be ok)

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/DefaultFormatter.cs:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs:
	  Implement support for per mime-type formatting policies.

2009-06-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug
	  510226 - Edit / Folding commands seem to be currently
	  broken".

2009-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/AutoSave.cs: Fixed "Bug 504605 -
	  Crash after removing a project".

2009-06-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: When setting
	  the mime type for the file, try to find one for which there
	  is a syntax mode.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/EditActions.cs: Fixed Bug 506245 -
	  Block indent doesn't work.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: fixed
	  'Bug 506246 - Search command doesn't copy the selected
	  string if find widget is visible'.

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor\SourceEditorView.cs: Use FilePath
	  for representing paths.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>
